--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,25 +5,30 @@
     android:id="@+id/nav_graph"
     app:startDestination="@id/mainFragment">
 
-    <fragment
-        android:id="@+id/mainFragment"
-        android:name="com.football.manager.view.fragments.MainFragment"
-        android:label="MainFragment"
-        tools:layout="@layout/fragment_main">
-        <action
-            android:id="@+id/action_mainFragment_to_scheduleFragment"
-            app:destination="@id/scheduleFragment" />
-    </fragment>
+        <fragment
+            android:id="@+id/mainFragment"
+            android:name="com.football.manager.view.fragments.MainFragment"
+            android:label="MainFragment"
+            tools:layout="@layout/fragment_main">
+            <action
+                android:id="@+id/action_mainFragment_to_scheduleFragment"
+                app:destination="@id/rankingFragment" />
+        </fragment>
+
+    <!--    <fragment-->
+    <!--        android:id="@+id/rankingFragment"-->
+    <!--        android:name="com.football.manager.view.fragments.RankingFragment"-->
+    <!--        android:label="RankingFragment"-->
+    <!--        tools:layout="@layout/fragment_ranking">-->
+    <!--        <action-->
+    <!--            android:id="@+id/action_scheduleFragment_to_mainFragment"-->
+    <!--            app:destination="@id/mainFragment" />-->
+    <!--    </fragment>-->
+
 
     <fragment
-        android:id="@+id/scheduleFragment"
+        android:id="@+id/rankingFragment"
         android:name="com.football.manager.view.fragments.RankingFragment"
         android:label="RankingFragment"
-        tools:layout="@layout/fragment_ranking">
-        <action
-            android:id="@+id/action_scheduleFragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
-    </fragment>
-
-
+        tools:layout="@layout/fragment_ranking" />
 </navigation>
